k3s/apps/argocd-ui/base/ingress.yaml
# expose Argo CD website in dev
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ui
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - '*.local.lttviet.com'
      secretName: lttviet.com
  rules:
    - host: argocd.local.lttviet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
